# faultline-rs

./: .gitignore  .mise.toml  AGENTS.md  BUILDING.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  MAINTAINERS.md  README.md  RELEASE.md  TESTING.md  codecov.yml  deny.toml  mutants.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/faultline/: README.md  action.yml
.github/workflows/: ci-extended.yml  ci-full.yml  ci.yml  coverage.yml  example-faultline.yml  release.yml
.kiro/specs/repo-operating-system/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/v01-artifact-hardening/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/v01-hardening/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/v01-product-sharpening/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/v01-release-train/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
badges/: README.md  ripr.json
crates/faultline-app/: Cargo.toml  claude.md
crates/faultline-app/src/: claude.md  lib.rs
crates/faultline-app/tests/: bdd_report_generation.rs
crates/faultline-cli/: Cargo.toml  claude.md
crates/faultline-cli/src/: claude.md  main.rs
crates/faultline-cli/src/snapshots/: claude.md  faultline_cli__tests__cli_help.snap
crates/faultline-cli/tests/: claude.md  inspect_bundle_e2e.rs  loading_e2e.rs  smoke.rs
crates/faultline-codes/: Cargo.toml  claude.md
crates/faultline-codes/src/: claude.md  lib.rs
crates/faultline-fixtures/: Cargo.toml  claude.md
crates/faultline-fixtures/src/: arb.rs  claude.md  fallible.rs  lib.rs  secrets.rs
crates/faultline-git/: Cargo.toml  claude.md
crates/faultline-git/src/: claude.md  lib.rs
crates/faultline-junit/: Cargo.toml  claude.md
crates/faultline-junit/src/: claude.md  lib.rs
crates/faultline-loader/: Cargo.toml  claude.md
crates/faultline-loader/src/: lib.rs
crates/faultline-localization/: Cargo.toml  claude.md
crates/faultline-localization/benches/: localization_bench.rs
crates/faultline-localization/src/: claude.md  lib.rs
crates/faultline-localization/tests/: bdd_narrowing.rs
crates/faultline-ports/: Cargo.toml  claude.md
crates/faultline-ports/src/: claude.md  lib.rs
crates/faultline-probe-exec/: Cargo.toml  claude.md
crates/faultline-probe-exec/src/: claude.md  lib.rs
crates/faultline-render/: Cargo.toml  claude.md
crates/faultline-render/proptest-regressions/: claude.md
crates/faultline-render/src/: claude.md  html.rs  lib.rs  markdown.rs
crates/faultline-render/src/snapshots/: claude.md  faultline_render__tests__analysis_json.snap  faultline_render__tests__index_html.snap
crates/faultline-render/tests/: bdd_export_consistency.rs  bdd_scenarios.rs  claude.md
crates/faultline-sarif/: Cargo.toml  claude.md
crates/faultline-sarif/src/: claude.md  lib.rs
crates/faultline-sarif/tests/: export_surfaces.rs
crates/faultline-store/: Cargo.toml  claude.md
crates/faultline-store/proptest-regressions/: lib.txt
crates/faultline-store/src/: claude.md  lib.rs
crates/faultline-surface/: Cargo.toml  claude.md
crates/faultline-surface/src/: claude.md  lib.rs
crates/faultline-types/: Cargo.toml  claude.md
crates/faultline-types/src/: claude.md  lib.rs
crates/faultline-types/tests/: bdd_reproduction.rs  bdd_run_comparison.rs  schema_compat.rs
crates/xtask/: Cargo.toml  claude.md
crates/xtask/src/: ci.rs  claude.md  docs_check.rs  lib.rs  main.rs  run.rs  scaffold.rs  scenarios.rs  schema.rs  smoke.rs  tools.rs  verification_contracts.rs
crates/xtask/src/policy/: file_policy.rs  lint_policy.rs  mod.rs  no_panic.rs  report.rs
crates/xtask/src/ripr_verification/: annotations.rs  badges.rs  impacted_evidence.rs  mod.rs  pr_evidence.rs  pr_evidence_summary.rs  review_comments.rs
crates/xtask/tests/: ci_messages.rs  claude.md  doc_structure.rs  scaffold.rs  scenarios.rs  schema_drift.rs
docs/: CLIPPY_POLICY.md  FILE_POLICY.md  NO_PANIC_POLICY.md  VERIFICATION.md  architecture.md  crate-map.html  crate-map.md  mission-and-vision.md  non-goals.md  predicate-contract.md  verification-matrix.md
docs/adr/: 0001-hexagonal-architecture.html  0001-hexagonal-architecture.md  0002-git-cli-and-disposable-checkouts.md  0003-honest-localization-outcomes.md  0004-post-sharpening-direction.md  TEMPLATE.md
docs/book/: book.toml
docs/book/book/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-4e215114.js  toc-9ba5fd36.js  toc.html
docs/book/book/explanations/: flake-detection.html  localization.html  suspect-surface.html
docs/book/book/howto/: add-property-test.html  compare-runs.html  investigate-suspect-surface.html  reproduce-probe.html  use-flake-retries.html
docs/book/book/reference/: artifact-schema.html  cli-flags.html  exit-codes.html  predicate-contract.html
docs/book/book/tutorials/: first-run.html
docs/book/src/: SUMMARY.md
docs/book/src/explanations/: flake-detection.md  localization.md  suspect-surface.md
docs/book/src/howto/: add-property-test.md  compare-runs.md  investigate-suspect-surface.md  reproduce-probe.md  use-flake-retries.md
docs/book/src/reference/: artifact-schema.md  cli-flags.md  exit-codes.md  (+1 more)
docs/ci/: coverage.md
docs/handbook/: README.md  bumping-schema-version.md  deciding-test-technique.md  handling-breaking-changes.md  reviewing-failing-property-tests.md  worked-example-flake-detection.md  worked-example-suspect-surface.md
docs/patterns/: catalog.html  catalog.md
docs/scenarios/: behavior_map.md  scenario_index.html  scenario_index.md
fuzz/: Cargo.toml  claude.md
fuzz/fuzz_targets/: claude.md  fuzz_analysis_report.rs  fuzz_cli_args.rs  fuzz_git_diff_parse.rs  fuzz_html_escape.rs  fuzz_junit_export.rs  fuzz_sarif_export.rs  fuzz_store_json.rs
policy/: clippy-debt.toml  clippy-lints.toml  no-panic-allowlist.toml  non-rust-allowlist.toml
schemas/: analysis-report.schema.json
schemas/ripr/: pr-evidence.schema.json  review-comments.schema.json
(+1 files in other folders)
