[workspace]
members = [
  "crates/faultline-codes",
  "crates/faultline-types",
  "crates/faultline-localization",
  "crates/faultline-surface",
  "crates/faultline-ports",
  "crates/faultline-app",
  "crates/faultline-git",
  "crates/faultline-probe-exec",
  "crates/faultline-store",
  "crates/faultline-render",
  "crates/faultline-cli",
  "crates/faultline-fixtures",
  "crates/faultline-sarif",
  "crates/faultline-junit",
  "crates/xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Steven Zimmerman, CPA"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
proptest = "1.6"
libc = "0.2"
schemars = "0.8"
insta = { version = "1.40", features = ["json"] }
quick-xml = "0.39"
anyhow = "1.0"
