[package]
name = "faultline-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
faultline-types = { path = "../crates/faultline-types" }
serde_json = "1.0"

# Prevent this from interfering with workspace
[workspace]
members = ["."]

[[bin]]
name = "fuzz_analysis_report"
path = "fuzz_targets/fuzz_analysis_report.rs"
doc = false
