[package]
name = "faultline-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
faultline-types = { path = "../faultline-types" }
faultline-codes = { path = "../faultline-codes" }
proptest = { workspace = true }
tempfile = "3"

[lints]
workspace = true
