[package]
name = "faultline-junit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
faultline-types = { path = "../faultline-types" }
quick-xml.workspace = true

[dev-dependencies]
faultline-codes = { path = "../faultline-codes" }
faultline-fixtures = { path = "../faultline-fixtures" }
proptest = { workspace = true }
