[package]
name = "faultline-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde_json.workspace = true
faultline-types = { path = "../faultline-types" }

[dev-dependencies]
tempfile = "3"
proptest = { workspace = true }
faultline-fixtures = { path = "../faultline-fixtures" }

[lints]
workspace = true
