[package]
name = "faultline-localization"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
faultline-codes = { path = "../faultline-codes" }
faultline-types = { path = "../faultline-types" }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
faultline-fixtures = { path = "../faultline-fixtures" }

[[bench]]
name = "localization_bench"
harness = false
