[package]
name = "faultline-probe-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
faultline-codes = { path = "../faultline-codes" }
faultline-ports = { path = "../faultline-ports" }
faultline-types = { path = "../faultline-types" }
