[package]
name = "faultline-render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde_json.workspace = true
faultline-types = { path = "../faultline-types" }

[dev-dependencies]
faultline-codes = { path = "../faultline-codes" }
proptest.workspace = true
