[package]
name = "faultline-render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde_json.workspace = true
faultline-types = { path = "../faultline-types" }
faultline-codes = { path = "../faultline-codes" }

[dev-dependencies]
proptest.workspace = true
insta = { workspace = true }
faultline-fixtures = { path = "../faultline-fixtures" }
tempfile = "3"
