[package]
name = "faultline-sarif"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
faultline-types = { path = "../faultline-types" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
faultline-codes = { path = "../faultline-codes" }
faultline-fixtures = { path = "../faultline-fixtures" }
faultline-junit = { path = "../faultline-junit" }
proptest = { workspace = true }
