[package]
name = "faultline-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
faultline-ports = { path = "../faultline-ports" }
faultline-types = { path = "../faultline-types" }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = { workspace = true }
faultline-codes = { path = "../faultline-codes" }
