[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
faultline-types = { path = "../faultline-types" }
faultline-render = { path = "../faultline-render", optional = true }
faultline-sarif = { path = "../faultline-sarif", optional = true }
faultline-junit = { path = "../faultline-junit", optional = true }
schemars.workspace = true
serde_json.workspace = true
regex = "1"
tempfile = "3"

[features]
default = ["export-adapters"]
export-adapters = ["faultline-render", "faultline-sarif", "faultline-junit"]

[dev-dependencies]
proptest.workspace = true
